# internal/api/gen/oas_response_encoders_gen.go
@@ -13,7 +13,7 @@ import (
 
 func encodeGetMetricsResponse(response GetMetricsRes, w http.ResponseWriter, span trace.Span) error {
 	switch response := response.(type) {
-	case *MetricsResponse:
+	case *MetricsListResponse:
 		w.Header().Set("Content-Type", "application/json; charset=utf-8")
 		w.WriteHeader(200)
 		span.SetStatus(codes.Ok, http.StatusText(200))
